add a trivial IP to compute vector inner-products

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -38,6 +38,7 @@ IPS ?= aes           \
        otbn          \
        uart          \
        usbdev        \
+       vec_dot       \
        usbuart
 
 TOPS ?= top_earlgrey
