added dla, tested on verilator with 1 PE

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -38,6 +38,7 @@ IPS ?= aes           \
        otbn          \
        uart          \
        usbdev        \
+       dla           \
        usbuart
 
 TOPS ?= top_earlgrey
