--- a/sw/device/examples/hello_world/meson.build
+++ b/sw/device/examples/hello_world/meson.build
@@ -14,6 +14,7 @@ foreach device_name, device_lib : sw_lib_arch_core_devices
       sw_lib_runtime_log,
       sw_lib_pinmux,
       sw_lib_dif_gpio,
+      sw_lib_dif_dla,
       sw_lib_irq,
       sw_lib_dif_spi_device,
       sw_lib_dif_uart,
