add ddr_ctrl to use DDR3 on genesys2

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -39,6 +39,7 @@ IPS ?= aes           \
        uart          \
        usbdev        \
        vec_dot       \
+       ddr_ctrl      \
        usbuart
 
 TOPS ?= top_earlgrey
