--- a/sw/device/examples/hello_world/meson.build
+++ b/sw/device/examples/hello_world/meson.build
@@ -18,6 +18,7 @@ foreach device_name, device_lib : sw_lib_arch_core_devices
       sw_lib_dif_spi_device,
       sw_lib_dif_uart,
       sw_lib_dif_vec_dot,
+      sw_lib_dif_ddr_ctrl,
       riscv_crt,
       sw_lib_irq_handlers,
       device_lib,
