added lpcnet1,2 and grunet template, ddr_out do not match

--- a/sw/device/examples/meson.build
+++ b/sw/device/examples/meson.build
@@ -20,3 +20,6 @@ subdir('hello_usbdev')
 subdir('hello_world')
 subdir('lstm')
 subdir('wavenet')
+subdir('grunet')
+subdir('lpcnet1')
+subdir('lpcnet2')
